--- a/src/client/src/components/Post/Post.module.css
+++ b/src/client/src/components/Post/Post.module.css
@@ -6,6 +6,8 @@
     border-radius: 30px;
     margin: 70px 0;
     position: relative;
+    max-width: 800px;
+    overflow-wrap: break-word;
 }
 
 .close {
